active-deployments/blog-prod/services/blog-deploy.yaml
#Frontend deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dev
  namespace: blog-prod
spec:
  selector:
    matchLabels:
      app: frontend-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-dev
    spec:
      containers:
        - name: frontend-astro
          image: docker-registry-local.taild2a7e.ts.net/astro-app
          imagePullPolicy: Never
          ports:
            - containerPort: 4321
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-dev-svc
  namespace: blog-prod
spec:
  selector:
    app: frontend-dev
  ports:
  - port: 4321
    targetPort: 4321

# Backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dev
  namespace: blog-prod
spec:
  selector:
    matchLabels:
      app: gin-backend
  template:
    metadata:
      labels:
        app: gin-backend
    spec:
      containers:
      - name: gin-backend
        image: docker-registry-local.taild2a7e.ts.net/gin-backend
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gin-backend
  namespace: blog-prod
spec:
  selector:
    app: gin-backend
  ports:
  - port: 8080
    targetPort: 8080

# ENV POSTGRES_HOST=
# ENV POSTGRES_PORT=
# ENV POSTGRES_USER=
# ENV POSTGRES_PASSWORD=
# ENV POSTGRES_NAME=
# ENV POSTGRES_SSLMODE=
