active-deployments/blog-prod/services/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ui-ingress
  namespace: blog-prod
spec:
  defaultBackend:
    service:
      name: minio-ui-svc
      port:
        number: 9090
  ingressClassName: tailscale
  tls:
    - hosts:
        - minio
